--- a/run.example
+++ b/run.example
@@ -1,3 +1,3 @@
 #!/bin/bash
 
-docker run -i -t -v /var/lib/:/var/lib/ -p 80:80 --name geard-router openshift/geard-router-haproxy /var/lib/haproxy/bin/signal_router
+docker run -i -t -v /var/lib/containers:/var/lib/containers -p 80:80 --name geard-router openshift/geard-router-haproxy /usr/bin/geard-router-haproxy-sighandler
